Add publisher field in package.json

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": {
     "name": "bonham000"
   },
+  "publisher": "bonham000",
   "repository": {
     "url": "https://github.com/bonham000/css-sort-classname"
   },
