--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "css-sort-classname",
-  "displayName": "CSS Sort by Classname",
+  "displayName": "CSS Sort By Classname",
   "description": "Sort classnames in a CSS file alphabetically",
   "license": "BSD-2-Clause",
   "author": {
@@ -10,7 +10,7 @@
   "repository": {
     "url": "https://github.com/bonham000/css-sort-classname"
   },
-  "version": "0.0.2",
+  "version": "0.0.3",
   "engines": {
     "vscode": "^1.64.0"
   },
