--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "css-sort-classname",
   "displayName": "CSS Sort By Classname",
-  "description": "Sort classnames in a CSS file alphabetically",
+  "description": "Sort classnames in a CSS file alphabetically.",
   "license": "BSD-2-Clause",
   "author": {
     "name": "bonham000"
@@ -10,7 +10,7 @@
   "repository": {
     "url": "https://github.com/bonham000/css-sort-classname"
   },
-  "version": "0.0.4",
+  "version": "0.0.5",
   "engines": {
     "vscode": "^1.64.0"
   },
